# md-combat

./: .claude-r-env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION.md  README.md  dependencies.R  pyproject.toml
.buildkite/: pipeline.yml
docs/: APP_NOTE_PYTHON_R_PARITY.md  APP_NOTE_SSG_METADATA.yaml
examples/: combat_comparison.ipynb
scripts/: export_datasets.R  generate_expected.R  tag  test
src/md_combat/: __init__.py  _helpers.py  combat.py  combat_seq.py  datasets.py
src/md_combat/data/: airway_counts.parquet  airway_meta.parquet  bladderbatch_meta.parquet
tests/: test_combat.py  test_combat_e2e.py  test_combat_seq.py
tests/expected/: airway_20k_combat_seq.parquet  airway_20k_gene_ids.parquet  airway_20k_uneven_batch.parquet  airway_20k_uneven_combat_seq.parquet  airway_full_combat_seq.parquet  simulated_combat_seq.parquet  simulated_counts.parquet  simulated_meta.parquet
