[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "md-combat"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
e2e = ["rpy2~=3.5"]
dev = ["pytest", "pytest-cov", "rpy2~=3.5", "ruff", "pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
branch = true
source = ["src/md_combat"]
