[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "md-combat"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12",
    "scipy>=1.10",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty>=0.0.28",  # Python type checker
    "pre-commit",
    "jupyter",
    "nbconvert",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"md_combat" = ["data/*.parquet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
branch = true
source = ["src/md_combat"]
